oh crap i did everthing at one commit sorry

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                
                 <button class="left-arrow-btn"></button>
                 <div class="pixel-display"> 16x16</div>
-                <button class="right-arrouw-btn"></button>
+                <button class="right-arrow-btn"></button>
 
             </div>
 
@@ -26,6 +26,8 @@
             <div class="bottom-btn-container">
 
                 <button class="reset-btn">RESET</button>
+                <button class="start-btn">START</button>
+                <button class="power-btn">OFF/ON</button>
 
             </div>
 
