--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="top-btn-container">
                
                 <button class="left-arrow-btn"></button>
-                <div class="pixel-display"> 16x16</div>
+                <div class="pixel-display">16</div>
                 <button class="right-arrow-btn"></button>
 
             </div>
