added change color option

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="bottom-btn-container">
 
                 <button class="reset-btn">RESET</button>
+                <button class="color-btn">COLOR</button>
                 <button class="power-btn">OFF/ON</button>
 
             </div>
